--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <link href="css/style.css" rel="stylesheet" />
+    <title>Week Two Code Challenge</title>
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <div class="add-item-container">
+          <input type="text" name="item" id="item" />
+          <button class="add-item-button">Add Item</button>
+        </div>
+        <div class="list-container-wrapper">
+          <ul class="list-container"></ul>
+        </div>
+      </div>
+    </div>
+    <script src="./index.js"></script>
+  </body>
 </html>
