--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="wrapper">
       <div class="container">
+        <h2 class="heading">Shopping List</h2>
         <div class="add-item-container">
           <input type="text" name="item" id="item" />
           <button class="add-item-button">Add Item</button>
